# scarb-macro-example

./: Scarb.toml
example/: Scarb.toml
example/src/: lib.cairo
macro/: Cargo.toml  Scarb.toml
macro/src/: attribute.rs  derive.rs  inline.rs  lib.rs
