[package]
name = "dojo_macro"
version = "0.1.0"

[lib]
crate-type = ["rlib","cdylib"]

[dependencies]
cairo-lang-macro = { git = "https://github.com/software-mansion/scarb.git", rev = "9ae14a544d0f4a9bf9274cc93ed0d5b24287f8f4" }
cairo-lang-primitive-token = { git = "https://github.com/starkware-libs/cairo.git", rev = "1e7992b5fd6e8a0d921613dc3b49c1162dc955ea" }
cairo-lang-parser = { git = "https://github.com/starkware-libs/cairo.git", rev = "1e7992b5fd6e8a0d921613dc3b49c1162dc955ea" }
cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo.git", rev = "1e7992b5fd6e8a0d921613dc3b49c1162dc955ea" }
cairo-lang-syntax = { git = "https://github.com/starkware-libs/cairo.git", rev = "1e7992b5fd6e8a0d921613dc3b49c1162dc955ea" }
cairo-lang-defs = { git = "https://github.com/starkware-libs/cairo.git", rev = "1e7992b5fd6e8a0d921613dc3b49c1162dc955ea" }
cairo-lang-diagnostics = { git = "https://github.com/starkware-libs/cairo.git", rev = "1e7992b5fd6e8a0d921613dc3b49c1162dc955ea" }
smol_str = "0.3"

cainome = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.4.12", features = [ "abigen-rs" ] }
cainome-cairo-serde = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.4.12" }
starknet-crypto = "0.7.1"
