[package]
name = "dojo_macro"
version = "0.1.0"

[lib]
crate-type = ["rlib","cdylib"]

[dependencies]
cairo-lang-primitive-token = "1"
cairo-lang-macro = { git = "https://github.com/software-mansion/scarb.git", rev = "e43e07b553738b5f68bc7eca845c219f4203cce2" }

cairo-lang-parser = { git = "https://github.com/starkware-libs/cairo.git", rev = "c539d077479654eee6323d9c0c6eafad82d4851a" }
cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo.git", rev = "c539d077479654eee6323d9c0c6eafad82d4851a" }
cairo-lang-syntax = { git = "https://github.com/starkware-libs/cairo.git", rev = "c539d077479654eee6323d9c0c6eafad82d4851a" }
cairo-lang-defs = { git = "https://github.com/starkware-libs/cairo.git", rev = "c539d077479654eee6323d9c0c6eafad82d4851a" }
cairo-lang-diagnostics = { git = "https://github.com/starkware-libs/cairo.git", rev = "c539d077479654eee6323d9c0c6eafad82d4851a" }
smol_str = "0.3"

cainome = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.4.12", features = [ "abigen-rs" ] }
cainome-cairo-serde = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.4.12" }
starknet-crypto = "0.7.1"
